[gd_scene load_steps=19 format=3 uid="uid://pv1q5d0nv8cl"]

[ext_resource type="Script" path="res://UI/front_ui.gd" id="1_ee2an"]
[ext_resource type="Theme" uid="uid://dp7geumd7i46m" path="res://UI/theme.tres" id="1_fpu57"]
[ext_resource type="Texture2D" uid="uid://cu7mru1ibm0al" path="res://UI/Assets/Textures/NormalPauseButton.png" id="2_0orfy"]
[ext_resource type="Texture2D" uid="uid://c3ty4e87bq6f" path="res://UI/Assets/Textures/PressedPauseButton.png" id="3_v7l1g"]
[ext_resource type="Texture2D" uid="uid://d0r2p6v6my27e" path="res://UI/Assets/Textures/NormalRunButton.png" id="5_gljow"]
[ext_resource type="PackedScene" uid="uid://dstiviedqexhn" path="res://UI/heart_indicator_panel.tscn" id="5_l7a6s"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/joystick/virtual_joystick.tscn" id="6_gjg3d"]
[ext_resource type="Texture2D" uid="uid://dhfmh01ebq3i4" path="res://UI/Assets/Textures/PressedRunButton.png" id="6_hspny"]
[ext_resource type="Script" path="res://UI/BottomControllers.gd" id="6_ljllp"]
[ext_resource type="Script" path="res://UI/InteractButton.gd" id="7_kalnx"]
[ext_resource type="PackedScene" uid="uid://cmr8j8cfpl35u" path="res://Tools/safe_area.tscn" id="11_71ub7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aj4h7"]
bg_color = Color(0.560784, 0.345098, 0.164706, 1)
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sftym"]

[sub_resource type="GDScript" id="GDScript_5x1u5"]
script/source = "extends PanelContainer


# Called when the node enters the scene tree for the first time.
func _ready():
	if (not DisplayServer.is_touchscreen_available()):
		hide()
"

[sub_resource type="Animation" id="Animation_siv8c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0iv4e"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.267944, 0.366021),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -160)]
}

[sub_resource type="Animation" id="Animation_gaukr"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.217638, 2.63902),
"update": 0,
"values": [Vector2(0, -160), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wp481"]
_data = {
"RESET": SubResource("Animation_siv8c"),
"hide": SubResource("Animation_0iv4e"),
"show": SubResource("Animation_gaukr")
}

[node name="FrontUI" type="CanvasLayer"]
layer = 124
script = ExtResource("1_ee2an")

[node name="FrontUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_fpu57")

[node name="ActionsUI" type="Control" parent="FrontUi"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="QuestListContainer" type="MarginContainer" parent="FrontUi/ActionsUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 58.0
offset_top = -172.0
offset_right = 282.0
offset_bottom = -70.0
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 8
metadata/_edit_group_ = true

[node name="Panel" type="PanelContainer" parent="FrontUi/ActionsUI/QuestListContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="FrontUi/ActionsUI/QuestListContainer/Panel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PanelContainer" type="PanelContainer" parent="FrontUi/ActionsUI/QuestListContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aj4h7")

[node name="MarginContainer" type="MarginContainer" parent="FrontUi/ActionsUI/QuestListContainer/Panel/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="QuestTitleLabel" type="Label" parent="FrontUi/ActionsUI/QuestListContainer/Panel/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="QuestDescriptionLabel" type="Label" parent="FrontUi/ActionsUI/QuestListContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.223529, 0.172549, 0.117647, 1)

[node name="ActionListsRight" type="MarginContainer" parent="FrontUi/ActionsUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -184.0
offset_right = -66.0
offset_bottom = 58.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_group_ = true

[node name="ActionListsContainer" type="VBoxContainer" parent="FrontUi/ActionsUI/ActionListsRight"]
unique_name_in_owner = true
layout_mode = 2

[node name="TalkButton" type="Button" parent="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "-> talk"
alignment = 0
script = ExtResource("7_kalnx")

[node name="InteractButton" type="Button" parent="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "-> INTERACT"
alignment = 0
script = ExtResource("7_kalnx")

[node name="EnterButton" type="Button" parent="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "->| Enter"
alignment = 0
script = ExtResource("7_kalnx")

[node name="TouchButton" type="Button" parent="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Touch"
alignment = 0
script = ExtResource("7_kalnx")

[node name="ExitButton" type="Button" parent="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "|<- Exit"
alignment = 0
script = ExtResource("7_kalnx")

[node name="UpperUI" type="Control" parent="FrontUi"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 136.0
grow_horizontal = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="FrontUi/UpperUI"]
layout_mode = 2
offset_left = 64.0
offset_top = 36.0
offset_right = 536.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 64
dragger_visibility = 1
metadata/_edit_group_ = true

[node name="PauseButton" type="PanelContainer" parent="FrontUi/UpperUI/HSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sftym")
script = SubResource("GDScript_5x1u5")
metadata/_edit_group_ = true

[node name="TextureButton" type="TextureButton" parent="FrontUi/UpperUI/HSplitContainer/PauseButton"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_0orfy")
texture_pressed = ExtResource("3_v7l1g")

[node name="HeartIndicatorPanel" parent="FrontUi/UpperUI/HSplitContainer" instance=ExtResource("5_l7a6s")]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomControllers" type="Control" parent="FrontUi"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_ljllp")

[node name="Runnnn" type="Control" parent="FrontUi/BottomControllers"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="TouchScreenButton2" type="TouchScreenButton" parent="FrontUi/BottomControllers/Runnnn"]
visible = false
position = Vector2(-176, -184)
scale = Vector2(0.6875, 0.6875)
texture_normal = ExtResource("5_gljow")
texture_pressed = ExtResource("6_hspny")

[node name="Virtual Joystick" parent="FrontUi/BottomControllers" instance=ExtResource("6_gjg3d")]
layout_mode = 1
offset_left = 48.0
offset_top = -344.0
offset_right = 348.0
offset_bottom = -44.0
joystick_mode = 1
visibility_mode = 1
action_left = "player_walk_left"
action_right = "player_walk_right"
action_up = "player_walk_up"
action_down = "player_walk_down"

[node name="Popups" type="Control" parent="FrontUi"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 24.0
offset_right = 248.0
offset_bottom = 112.0
grow_horizontal = 2
mouse_filter = 2

[node name="QuestCompletePopup" type="PanelContainer" parent="FrontUi/Popups"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="FrontUi/Popups/QuestCompletePopup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.223529, 0.172549, 0.117647, 1)
theme_override_font_sizes/font_size = 24
text = "qUEST COMPLETED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestCompleteDuration" type="Timer" parent="FrontUi/Popups/QuestCompletePopup"]
unique_name_in_owner = true
wait_time = 3.0

[node name="QuestCompleteAnimation" type="AnimationPlayer" parent="FrontUi/Popups/QuestCompletePopup"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_wp481")
}

[node name="SafeArea" parent="." instance=ExtResource("11_71ub7")]
visible = false
metadata/_edit_group_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/TalkButton" to="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/TalkButton" method="_on_pressed"]
[connection signal="pressed" from="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/InteractButton" to="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/InteractButton" method="_on_pressed"]
[connection signal="pressed" from="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/EnterButton" to="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/EnterButton" method="_on_pressed"]
[connection signal="pressed" from="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/TouchButton" to="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/TouchButton" method="_on_pressed"]
[connection signal="pressed" from="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/ExitButton" to="FrontUi/ActionsUI/ActionListsRight/ActionListsContainer/ExitButton" method="_on_pressed"]
[connection signal="pressed" from="FrontUi/UpperUI/HSplitContainer/PauseButton/TextureButton" to="." method="trigger_pause_menu"]
